# iris-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/slurm_mcp/: __init__.py  __main__.py  config.py  server.py  slurm.py
tests/: conftest.py  test_config.py  test_slurm.py  test_tools.py
