[project]
name = "iris-mcp"
version = "0.1.0"
description = "MCP server for managing Slurm HPC clusters from AI coding assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
iris-mcp = "slurm_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
